--- a/styles.css
+++ b/styles.css
@@ -75,30 +75,24 @@ section {
     background-color: #fce4ec;
     padding: 2rem;
     border-radius: 8px;
+    position: relative;
 }
 
 .about-content {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 1rem;
 }
 
 .profile-section {
     position: relative;
-    text-align: center;
-    margin-right: 2rem;
 }
 
 .profile-img {
-    border-radius: 50%;
     width: 200px;
     height: 200px;
-    margin-bottom: 1rem;
-    transition: transform 0.3s ease;
-}
-
-.profile-img:hover {
-    transform: scale(1.1);
+    border-radius: 50%;
+    display: block;
 }
 
 .social-links {
@@ -111,14 +105,24 @@ section {
 }
 
 .social-links a {
-    display: block;
-    width: 24px;
-    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .social-links img {
-    width: 100%;
-    height: 100%;
+    width: 20px;
+    height: 20px;
+}
+
+.social-links a:hover {
+    background-color: #61dafb;
+    transform: scale(1.1);
 }
 
 .about-text {
@@ -160,7 +164,6 @@ section {
 
 .projects {
     background-color: #fff3e0;
-    /* Naranja claro */
     padding: 2rem;
     border-radius: 8px;
 }
@@ -253,7 +256,7 @@ section {
     border: none;
     font-size: 2rem;
     cursor: pointer;
-    color: #333;
+    color: #f7f7f7;
 }
 
 .carousel-button.prev {
@@ -266,7 +269,6 @@ section {
 
 .contact {
     background-color: #f1f8e9;
-    /* Verde claro */
     padding: 2rem;
     border-radius: 8px;
     text-align: center;
