--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,97 @@ section {
     margin-left: 20px;
 }
 
+/* Carrusel de tecnologias*/
+.carousel-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding: 30px 0;
+}
+
+.carousel-container h2{
+    text-align: center;
+    margin-top: 1em;
+}
+.carousel {
+    display: flex;
+    width: max-content;
+    gap: 2rem;
+    position: relative;
+}
+
+.carousel-left {
+    animation: scroll-left 30s linear infinite;
+}
+
+.carousel-right {
+    animation: scroll-right 30s linear infinite;
+}
+
+.carousel-container:hover .carousel-left,
+.carousel-container:hover .carousel-right {
+    animation-play-state: paused;
+}
+
+.item {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    flex: 0 0 auto;
+    width: 150px;
+    height: 150px;
+    border-radius: 20px;
+    background: linear-gradient(to right, #4cb0d894, #6fabbd);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease;
+}
+
+.item img {
+    width: 80px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.item:hover {
+    transform: scale(1.15);
+}
+
+/* Animaciones */
+@keyframes scroll-left {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-50%); }
+}
+
+@keyframes scroll-right {
+    0% { transform: translateX(-50%); }
+    100% { transform: translateX(0); }
+}
+
+/* Duplicación visual automática */
+.carousel::after {
+    content: "";
+    display: flex;
+    gap: 2rem;
+}
+
+.carousel-left::after {
+    content: "";
+    display: flex;
+    gap: 2rem;
+}
+.carousel-left::after {
+    content: "";
+    display: flex;
+    gap: 2rem;
+}
+
+.carousel-left::after {
+    content: attr(data-content);
+}
+
+
+
 /* Sección de proyectos */
 .projects {
     display: flex;
